[gd_scene load_steps=14 format=1]

[ext_resource path="res://widget_grid/gui.gd" type="Script" id=1]
[ext_resource path="res://widget_grid/graphics/grid.png" type="Texture" id=2]
[ext_resource path="res://widget_grid/grid_control.tscn" type="PackedScene" id=3]
[ext_resource path="res://widget_grid/reshape_grid.tscn" type="PackedScene" id=4]
[ext_resource path="res://widget_grid/graphics/icons/add_widget.png" type="Texture" id=5]
[ext_resource path="res://widget_grid/graphics/icons/edit_widget.png" type="Texture" id=6]
[ext_resource path="res://widget_grid/widget_factories_panel.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.8, 0.8, 0.8, 1 )
light_color = Color( 0.6, 0.6, 0.6, 1 )
dark_color = Color( 0.192157, 0.192157, 0.192157, 1 )
border_size = 2
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.8, 0.8, 0.8, 1 )
light_color = Color( 0.192157, 0.192157, 0.192157, 1 )
dark_color = Color( 0.6, 0.6, 0.6, 1 )
border_size = 2
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxFlat" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.554688, 0.26651, 0.26651, 1 )
light_color = Color( 0.308594, 0.14827, 0.14827, 1 )
dark_color = Color( 0.863281, 0.360825, 0.360825, 1 )
border_size = 2
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.552941, 0.262745, 0.262745, 1 )
light_color = Color( 0.862745, 0.360784, 0.360784, 1 )
dark_color = Color( 0.305882, 0.145098, 0.145098, 1 )
border_size = 2
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.552941, 0.262745, 0.262745, 1 )
light_color = Color( 0.305882, 0.145098, 0.145098, 1 )
dark_color = Color( 0.862745, 0.360784, 0.360784, 1 )
border_size = 2
border_blend = true
draw_bg = true

[node name="gui" type="ColorFrame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
color = Color( 0.326172, 0.652344, 0.522385, 1 )
script/script = ExtResource( 1 )

[node name="grid_area" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 0.0
margin/bottom = 0.0

[node name="scroller" type="Control" parent="grid_area"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 80.0

[node name="background" type="TextureFrame" parent="grid_area/scroller"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="grid" parent="grid_area/scroller" instance=ExtResource( 3 )]

margin/right = 0.0
margin/bottom = 0.0

[node name="reshape_grid" parent="grid_area/scroller" instance=ExtResource( 4 )]

visibility/visible = false

[node name="scroll_bar_h" type="HScrollBar" parent="grid_area"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 40.0
margin/bottom = 0.0
range/min = 0.0
range/max = 200.0
range/step = 0.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
custom_step = -1.0

[node name="scroll_bar_v" type="VScrollBar" parent="grid_area"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 40.0
range/min = 0.0
range/max = 320.0
range/step = 0.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
custom_step = -1.0

[node name="corner_rect" type="ColorFrame" parent="grid_area"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 40.0
margin/right = 0.0
margin/bottom = 0.0
color = Color( 0.296875, 0.296875, 0.296875, 1 )

[node name="button_area" type="Panel" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 40.0

[node name="add_widget_button" type="Button" parent="button_area"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = false

[node name="edit_widgets_button" type="Button" parent="button_area"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 80.0
margin/bottom = 40.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 6 )
flat = false

[node name="fullscreen_button1" type="Button" parent="button_area"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 40.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "FS"
flat = false

[node name="fullscreen_button2" type="Button" parent="button_area"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 0.0
margin/right = 160.0
margin/bottom = 40.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "FS"
flat = false

[node name="fullscreen_button3" type="Button" parent="button_area"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 40.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "FS"
flat = false

[node name="edit_buttons" type="Control" parent="button_area"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 40.0

[node name="raiselower" type="Button" parent="button_area/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "R/L"
flat = false

[node name="reshape" type="Button" parent="button_area/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 80.0
margin/bottom = 40.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Rshp"
flat = false

[node name="rotate" type="Button" parent="button_area/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 40.0
margin/right = 80.0
margin/bottom = 80.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Rot"
flat = false

[node name="delete" type="Button" parent="button_area/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 40.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Del"
flat = false

[node name="configure" type="Button" parent="button_area/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 40.0
margin/right = 120.0
margin/bottom = 80.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Conf"
flat = false

[node name="widget_factories_panel" parent="." instance=ExtResource( 7 )]

visibility/visible = false


